# dcore

./: README.md
kernel/: .gdbinit  .gitignore  Cargo.toml  Makefile  build.rs
kernel/src/: config.rs  consts.rs  lang_items.rs  link_app.S  main.rs
kernel/src/mm/: address.rs  frame.rs  heap.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: context.rs  mod.rs  switch.S
kernel/src/trap/: context.rs  mod.rs  trap.S
user/: .gitignore  Cargo.toml  Makefile
user/src/: lang_items.rs  lib.rs  linker.lds  syscall.rs  uconsole.rs
