[package]
name = "dcore-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
spin = "0.9"
bitflags = "1.2"
xmas-elf = "0.7.0"

